--- a/index.html
+++ b/index.html
@@ -2,47 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Auction Viewer</title>
+</head>
+
+<body>
+  <div id="auction" class="flex justify-center bg-local h-screen" style="background-image: url('assets/achievement.png'); background-size: cover;
+      ">
+    <!-- Text -->
+    <div class="w-1/2 h-screen ps-10 flex flex-col align-center gap-5">
+      <div class="pt-6 flex flex-col gap-4">
+        <h3 class="text-violet-50 font-bold">
+          Item Name :
+          <span id="item-name" class="text-cyan-400 font-bold font-mono rounded p-1 px-2 ms-4">Loading...</span>
+        </h3>
+        <h3 class="text-violet-50 font-bold">
+          Time Left :
+          <span id="time-left" class="text-green-500 font-bold font-mono rounded p-1 px-2 ms-8">0d 0h 0m 0s</span>
+        </h3>
+        <h3 class="text-violet-50 font-bold">
+          Current Bid :
+          <span id="current-bid" class="text-cyan-400 font-bold font-mono rounded p-1 px-2 ms-4">Loading...</span>
+        </h3>
+        <h3 class="text-violet-50 font-bold">
+          Top Bidder :
+          <span id="top-bidder" class="text-cyan-400 font-bold font-mono rounded p-1 px-2 ms-4">Loading...</span>
+        </h3>
+      </div>
+      <!-- Bid -->
+      <div class="flex flex-col gap-2 justify-center align-center items-center pt-10">
+        <p class="text-white">Enter your bid</p>
+        <input id="bid-input" class="text-black font-mono bg-white rounded border-4 border-slate-600" type="number" />
+        <button onclick="placeBid()">
+          <img src="assets/submit.png" alt="Submit" />
+        </button>
+        <h3 id="bid-error" class="text-red-500 text-center font-mono"></h3>
+      </div>
+    </div>
+    <!-- Image -->
+    <div id="auction-img" class="w-1/2 h-screen p-5 flex justify-center"></div>
+  </div>
 
   <script src="js/main.js"></script>
   <script src="js/inputValid.js"></script>
   <script src="js/protect.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-
-</head>
-
-<body>
-  <div id="app">
-    <div id="auction" class="flex justify-center bg-local h-screen" style="background-image: url('assets/achievement.png'); background-size: cover;">
-      <!-- Text -->
-      <div class="w-1/2 h-screen ps-10 flex flex-col align-center gap-5 ">
-        <div class="pt-6 flex flex-col gap-4">
-          <h3 class="text-violet-50 font-bold">Item Name : <span id="item-name"
-              class="text-cyan-400 font-bold font-mono rounded p-1 px-2 ms-4">Loading...</span></h3>
-          <h3 class="text-violet-50 font-bold">Time Left : <span id="time-left"
-              class="text-green-500 font-bold font-mono  rounded p-1 px-2 ms-8">0d 0h 0m 0s</span></h3>
-          <h3 class="text-violet-50 font-bold">Current Bid : <span id="current-bid"
-              class="text-cyan-400 font-bold font-mono  rounded p-1 px-2 ms-4">Loading...</span></h3>
-          <h3 class="text-violet-50 font-bold">Top Bidder : <span id="top-bidder"
-              class="text-cyan-400 font-bold font-mono  rounded p-1 px-2 ms-4">Loading...</span></h3>
-        </div>
-        <!-- Bid -->
-        <div class="flex flex-col gap-2 justify-center align-center items-center pt-10">
-          <p class="text-white">Enter your bid</p>
-          <input id="bid-input" class="text-black font-mono bg-white rounded border-4 border-slate-600" type="number" >
-          <button onclick="placeBid()"><img src="assets/submit.png" alt="Submit"></button>
-          <h3 id="bid-error" class="text-red-500 text-center font-mono"></h3>
-        </div>
-      </div>
-      <!-- Image -->
-      <div id="auction-img" class="w-1/2 h-screen p-5 flex justify-center">
-      </div>
-    </div>
-  </div>
-
-
 </body>
 
 </html>
